	create commandframe.cpp to handle the command frame (which have the 4 "fast launch" buttons)


2007-Oct-31 UPDATE   Dick Hollenbeck <dickelbeck@yahoo.com>
================================================================================
+ all
  * Added Doxygen configuration file, whose standard name is Doxyfile.  Output
    is set to go to ./doxygen directory just off the project tree.
  * added a note to todo.txt which asks folks to start using "Doxygen compatible"
    comments in member functions and classes.  Run Doxygen on the project, then
    look at the documentation for class INSPECTOR as an example.


2007-Oct-31 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all:
    gcc 4.2.1 compatibility: change char * to const char * whenever it was necessary,
    mainly in .xpm files


2007-Oct-30 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
    added BOARD_ITEM::Save() and to all derived classes as well.  Made virtual
    and removed all UI code from these utility functions.
    removed WriteDesc() functions from all BOARD_ITEM derived classes, although
    Keeping old ones in commented out form for a while for reference.  
    @todo: delete these from *.cpp files eventually.
    zones.cpp, clean up in prep for enhancements.
+ gerbview
    fixed bug which came about when BOARD::~BOARD() started deleting the objects
    that a BOARD owns.  export_to_pcbnew.cpp was not consistent with this 
    design and was crashing.  Also, export_to_pcbnew.cpp now uses the simple
    BOARD::Save() function.  It was another place to maintain the PCB file format,
    rather than simply putting that knowledge into one place like BOARD::Save().
+ all
    beautified gr_basic.cpp and made CLIP_LINE macro a static inline function.


2007-Oct-30 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>